--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,10 @@ spring.mustache.check-template-location = false
 vaadin.launch-browser=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
-spring.jpa.defer-datasource-initialization = true
+vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla
+
+# Magnolia
+magnolia.author.url= https://demo.magnolia-cms.com
+magnolia.public.url=https://demopublic.magnolia-cms.com
+magnolia.admin.name=superuser
+magnolia.admin.password=superuser
