--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mustache.check-template-location = false
 vaadin.launch-browser=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla
+vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,org.vaadin.addons
 
 # Magnolia
 magnolia.author.url= https://demo.magnolia-cms.com
